@@ -172,6 +172,10 @@ the way to turn off notification to the postmaster.
 If this e-mail address is given, messages containing a virus or worm are
 redirected to it.
 .TP
+\fB-r, \-\-report-phish=EMAILADDRESS\fR
+Report caught phishing to an anti-phish organisation's email address,
+e.g. reportphishing@antiphishing.org.
+.TP
 \fB-U, \-\-quarantine-dir=DIR\fR
 If this option is given, infected files are left in this directory.
 The directory must not be publicly readable or writable, if it is,
